--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dash==2.14.0
-plotly==5.18.0
-pandas==2.1.0
-python-dotenv==1.0.0
-requests==2.31.0
-websocket-client==1.6.0
+dash>=2.0.0
+plotly>=5.0.0
+pandas>=1.3.0
+python-dotenv>=0.19.0
+requests>=2.25.0
+websocket-client>=1.0.0
